// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en <GifExperApp/> debe de mostrar una lista de categorias  1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one piece"
      key="one piece"
    />
    <GifGrid
      category="to love ru"
      key="to love ru"
    />
  </ol>
</Fragment>
`;

exports[`pruebas en <GifExperApp/> probando el snapShop  1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
